[gd_scene load_steps=13 format=1]

[ext_resource path="res://core/Menu/ProfileMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/libel-suit-rg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ref/styles/stylebox_blueframe.tres" type="StyleBox" id=3]
[ext_resource path="res://res/UI/SoftButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/coolvetica rg.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://core/Menu/NewProfileDialog.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/OstrichSans-Heavy.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 36
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]

font/size = 45
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 7 )

[node name="ProfileMenu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 0.0
margin/bottom = 124.0
script/script = ExtResource( 1 )

[node name="Profiles" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 605.0
margin/top = 390.0
margin/right = 105.0
margin/bottom = -210.0
alignment = 0

[node name="Label" type="Label" parent="Profiles"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Choose a Profile"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="List" type="PanelContainer" parent="Profiles"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 33.0
margin/right = 500.0
margin/bottom = 559.0
custom_styles/panel = ExtResource( 3 )

[node name="scroll" type="ScrollContainer" parent="Profiles/List"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 12.0
margin/top = 16.0
margin/right = 488.0
margin/bottom = 510.0
scroll/horizontal = false
scroll/vertical = true

[node name="box" type="VBoxContainer" parent="Profiles/List/scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 476.0
margin/bottom = 0.0
alignment = 0

[node name="Functions" type="HBoxContainer" parent="Profiles"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 563.0
margin/right = 500.0
margin/bottom = 600.0
alignment = 1

[node name="New" parent="Profiles/Functions" instance=ExtResource( 4 )]

margin/left = 99.0
margin/right = 234.0
text = "New Profile"

[node name="Delete" parent="Profiles/Functions" instance=ExtResource( 4 )]

margin/left = 238.0
margin/right = 400.0
text = "Delete Profile"

[node name="GameView" type="VBoxContainer" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -45.0
margin/top = 390.0
margin/right = -560.0
margin/bottom = -210.0
alignment = 0

[node name="Title" type="Label" parent="GameView"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 515.0
margin/bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "CurrentProfile"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="GameView"]

rect/min_size = Vector2( 0, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 48.0
margin/right = 515.0
margin/bottom = 51.0
custom_styles/separator = SubResource( 3 )

[node name="Text" type="RichTextLabel" parent="GameView"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 55.0
margin/right = 515.0
margin/bottom = 600.0
custom_fonts/normal_font = SubResource( 4 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1

[node name="NewProfileDialog" type="WindowDialog" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 200.0
margin/right = 610.0
margin/bottom = 340.0
popup/exclusive = true
window/title = "Create a new Profile"
script/script = ExtResource( 6 )

[node name="box" type="VBoxContainer" parent="NewProfileDialog"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 10.0
margin/right = 30.0
margin/bottom = 0.0
alignment = 0

[node name="Label" type="Label" parent="NewProfileDialog/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 49.0
text = "Please name your Profile.."
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Name" type="LineEdit" parent="NewProfileDialog/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 53.0
margin/right = 280.0
margin/bottom = 76.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Functions" type="HBoxContainer" parent="NewProfileDialog/box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 80.0
margin/right = 280.0
margin/bottom = 130.0
alignment = 1

[node name="OK" type="Button" parent="NewProfileDialog/box/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 98.0
margin/top = 15.0
margin/right = 127.0
margin/bottom = 34.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="Cancel" type="Button" parent="NewProfileDialog/box/Functions"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 131.0
margin/top = 15.0
margin/right = 182.0
margin/bottom = 34.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 390.0
margin/top = 180.0
margin/right = 640.0
margin/bottom = 310.0
popup/exclusive = true
window/title = "Please Confirm..."
dialog/text = "You are about to delete this Profile.\nAll data within this Profile will disappear.\nThis action cannot be undone!\n\nAre you sure you want to proceed\?"
dialog/hide_on_ok = true

[node name="Camera" type="Position2D" parent="."]

transform/pos = Vector2( 640, 510 )

[node name="Cam" type="Camera2D" parent="Camera"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 6.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Accept" parent="." instance=ExtResource( 4 )]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
margin/left = 520.0
margin/top = 120.0
margin/right = 499.0
margin/bottom = 193.0
custom_fonts/font = SubResource( 6 )
text = "Accept Profile"

[connection signal="pressed" from="Profiles/Functions/New" to="." method="_on_New_pressed"]

[connection signal="pressed" from="Profiles/Functions/Delete" to="." method="_on_Delete_pressed"]

[connection signal="about_to_show" from="NewProfileDialog" to="NewProfileDialog" method="_on_NewProfileDialog_about_to_show"]

[connection signal="text_changed" from="NewProfileDialog/box/Name" to="NewProfileDialog" method="_on_Name_text_changed"]

[connection signal="pressed" from="NewProfileDialog/box/Functions/OK" to="NewProfileDialog" method="_on_OK_pressed"]

[connection signal="pressed" from="NewProfileDialog/box/Functions/Cancel" to="NewProfileDialog" method="_on_Cancel_pressed"]

[connection signal="confirmed" from="DeleteConfirmDialog" to="." method="_on_DeleteConfirmDialog_confirmed"]


